# backend/microservices/admin-service/routes/group.js
@@ -5,10 +5,10 @@ const group = require('../controllers/group.controller')
 module.exports = (() => {
     let router = express.Router();
 
-    router.post(config.API_PREFIX + '/group', group.addGroup);
-    router.patch(config.API_PREFIX + '/group', group.editGroup);
-    router.get(config.API_PREFIX + '/groupAll', group.fetchGroupAll);
-    router.delete(config.API_PREFIX + '/group/:groupId', group.removeGroup);
+    router.post(config.API_PREFIX + '/groups', group.addGroup);
+    router.patch(config.API_PREFIX + '/groups/:groupId', group.editGroup);
+    router.get(config.API_PREFIX + '/groups', group.fetchGroupAll);
+    router.delete(config.API_PREFIX + '/groups/:groupId', group.removeGroup);
 
     return router;
 })();
