# backend/microservices/admin-service/routes/resource.js
@@ -5,10 +5,10 @@ const resource = require('../controllers/resource.controller')
 module.exports = (() => {
     let router = express.Router();
 
-    router.post(config.API_PREFIX + '/resource', resource.addResource);
-    router.patch(config.API_PREFIX + '/resource', resource.editResource);
-    router.get(config.API_PREFIX + '/resourceAll', resource.fetchResourceAll);
-    router.delete(config.API_PREFIX + '/resource/:resourceId', resource.removeResource);
+    router.post(config.API_PREFIX + '/resources', resource.addResource);
+    router.patch(config.API_PREFIX + '/resources/:resourceId', resource.editResource);
+    router.get(config.API_PREFIX + '/resources', resource.fetchResourceAll);
+    router.delete(config.API_PREFIX + '/resources/:resourceId', resource.removeResource);
 
     return router;
 })();
